ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/Reimbursement_Claims__c.object-meta.xml
<CustomObject>
    <label>Reimbursement Claim</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reimbursement Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>