ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Amount_Date__c.field-meta.xml
<CustomField>
    <fullName>Amount_Date__c</fullName>
    <formula>&quot;$&quot; &amp; TEXT(Claim_Amount__c) &amp; &quot; / &quot; &amp; TEXT( Date_Created_Date_Formula__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount / Date</label>
    <type>Text</type>
</CustomField>