ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Only for display purposes (to external (Contractor) user).</description>
    <formula>IF(NOT(ISBLANK(Final_Approval_On__c)) || NOT(ISBLANK(Final_Rejection_On__c)),  Status_Formula__c &amp; &quot; - &quot; &amp; Approval_Date_Formula__c , &quot;&quot;)</formula>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>