ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Available_Co_Op_Funds_After_Approval__c.field-meta.xml
<CustomField>
    <fullName>Available_Co_Op_Funds_After_Approval__c</fullName>
    <formula>if( NOT(Prior_Year_Claim__c), Contractor__r.Available_COOP_Funds__c  -  Net_Claim_Amount__c,Contractor__r.Available_COOP_Funds__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Co-Op Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>