ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Available_COOP__c.field-meta.xml
<CustomField>
    <fullName>Available_COOP__c</fullName>
    <description>Fetching the CoOp funds from Account to show to Contractors &amp; Loyalty Admins so that they know how much funds are available for Claim.</description>
    <formula>Contractor__r.Available_COOP_Funds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(deprecated) Available Co-Op Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>