ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Available_Premium_Cap_After_Approval__c.field-meta.xml
<CustomField>
    <fullName>Available_Premium_Cap_After_Approval__c</fullName>
    <formula>IF( AND(Deduct_from_Premium__c, NOT(Prior_Year_Claim__c)) ,  RC_Available_Premium_Cap__c -  Net_Claim_Amount__c , RC_Available_Premium_Cap__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Premium Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>