ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Available_Premium_Cap_Swag_Formula__c.field-meta.xml
<CustomField>
    <fullName>Available_Premium_Cap_Swag_Formula__c</fullName>
    <description>Solution to show Coop Dollars as a currency in an environment with Multi-currency enabled.</description>
    <formula>Contractor__r.Available_Premium_Cap_Swag_Formula__c</formula>
    <label>Available Premium Cap (Swag)</label>
    <type>Text</type>
</CustomField>