ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Check_Amount__c.field-meta.xml
<CustomField>
    <fullName>Check_Amount__c</fullName>
    <description>This field will be populated by OFM/IMT as what amount of check is issued to the Contractor for his claim.</description>
    <label>Check/Cheque Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>