ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Check_No__c.field-meta.xml
<CustomField>
    <fullName>Check_No__c</fullName>
    <description>Check Number that OFM/IMT will issue to Contractor.</description>
    <inlineHelpText>Reference this payment No. when inquiring for your check.</inlineHelpText>
    <label>Check/Cheque No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>