ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Amount__c</fullName>
    <description>This field is for the contractor when he submits his claim. He can enter the amount he wants to claim.</description>
    <label>Claim Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>