ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Claim_Amount_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Amount_Number__c</fullName>
    <description>Editable field without Currency code to display to external users (ROOFPRO Contractors).</description>
    <label>Claim Amount ($)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>