ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Claim_Description__c.field-meta.xml
<CustomField>
    <fullName>Claim_Description__c</fullName>
    <label>Claim Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>