ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Comments_PA__c.field-meta.xml
<CustomField>
    <fullName>Comments_PA__c</fullName>
    <label>Comments PA</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>