ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/CommunityUrl_Contractors__c.field-meta.xml
<CustomField>
    <fullName>CommunityUrl_Contractors__c</fullName>
    <formula>&quot;https://www.ikoroofpro.com/s/reimbursement-claims/&quot;+Id+&quot;/&quot;+Name


/*

Community link for L4 : https://l4-iko.cs142.force.com/s/

Community link for LQA4 : https://lqa4-iko.cs142.force.com/s/

Community link for FULL: https://full-iko.cs148.force.com/s/

Community link for PRODUCTION: https://www.ikoroofpro.com/s/

*/</formula>
    <label>CommunityUrl_Contractors</label>
    <type>Text</type>
</CustomField>