ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by &quot;Create a Reimbursement Claim&quot; - flow.</description>
    <label>Contractor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>IKOPRO Contractor, IKOPRO Contractor HA OK</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reimbursement Claims</relationshipLabel>
    <relationshipName>Reimbursement_Claim</relationshipName>
    <type>Lookup</type>
</CustomField>