ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Contractor_Language__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Language__c</fullName>
    <formula>TEXT(Contractor__r.Business_Operating_Language_ROOFPRO__c)</formula>
    <label>Contractor Language</label>
    <type>Text</type>
</CustomField>