ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Contractor Country Code for use in reports and/or list views.</description>
    <formula>TEXT(Contractor__r.BillingCountryCode)</formula>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>