ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Date_Approved_and_Check_Processed__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_and_Check_Processed__c</fullName>
    <label>Date Approved and Check Processed</label>
    <type>Date</type>
</CustomField>