ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Date_Check_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Check_Sent__c</fullName>
    <description>This field is populated by OFM/IMT. This is the date when Check is issued to the Contractor for his claim.</description>
    <label>Date Check/Cheque Sent</label>
    <type>Date</type>
</CustomField>