ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Date_Created_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Date_Created_Date_Formula__c</fullName>
    <description>Used for (external) list view display purposes.</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>