ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Date_Sent_to_IMT__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_IMT__c</fullName>
    <label>Date Sent to IMT</label>
    <type>Date</type>
</CustomField>