ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>Populated by Reimbursement Claim Approval process.</description>
    <label>DATE SUBMITTED</label>
    <type>Date</type>
</CustomField>