ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Deduct_from_Premium__c.field-meta.xml
<CustomField>
    <fullName>Deduct_from_Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is for Loyalty Admins. This box needs to be checked when Claim funds need to be deducted from Premium cap.</description>
    <inlineHelpText>Check this box only when the Claim amount needs to be deducted from the Premium balance.</inlineHelpText>
    <label>Deduct from Premium</label>
    <type>Checkbox</type>
</CustomField>