ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Email_PA__c.field-meta.xml
<CustomField>
    <fullName>Email_PA__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>