ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Final_Approval_On__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_On__c</fullName>
    <description>This field will be populated by OFM when IMT approves the claim.</description>
    <label>Final Approval On</label>
    <type>Date</type>
</CustomField>