ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Funds_Deducted__c.field-meta.xml
<CustomField>
    <fullName>Funds_Deducted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when loyalty admin deducts funds from the contractor&apos;s account (Used in process builder to prevent multiple deductions).</description>
    <label>Funds Deducted</label>
    <type>Checkbox</type>
</CustomField>