ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Hidden_Field_Claim_Yearly_Cut_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Field_Claim_Yearly_Cut_Off_Date__c</fullName>
    <label>Hidden Field - Claim Yearly Cut Off Date</label>
    <type>Date</type>
</CustomField>