ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <description>Field to be used by Loyalty Admins.</description>
    <label>Internal Comments</label>
    <type>TextArea</type>
</CustomField>