ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Internal_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Status__c</fullName>
    <description>Status of a reimbursement claim for internal use.</description>
    <label>Internal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted For Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Sent To IMT</fullName>
            </value>
            <value>
                <fullName>Approved and Check Processed</fullName>
            </value>
            <value>
                <fullName>New Preapproval Request</fullName>
            </value>
            <value>
                <fullName>Waiting for Information</fullName>
            </value>
            <value>
                <fullName>Submitted for Preapproval</fullName>
            </value>
            <value>
                <fullName>Preapproval Rejected</fullName>
            </value>
            <value>
                <fullName>Preapproval Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>