ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Last_Year_s_Premium_CAP__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_s_Premium_CAP__c</fullName>
    <label>Last Year&apos;s Premium CAP</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>