ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Last_Year_s_Premium_CAP_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_s_Premium_CAP_Formula__c</fullName>
    <description>Solution to show Coop Dollars as a currency in an environment with Multi-currency enabled.</description>
    <formula>&quot;$&quot; &amp;
IF( 
   Last_Year_s_Premium_CAP__c &gt;= 1000000, 
  TEXT(FLOOR(Last_Year_s_Premium_CAP__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Last_Year_s_Premium_CAP__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Last_Year_s_Premium_CAP__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Last_Year_s_Premium_CAP__c )), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Last_Year_s_Premium_CAP__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Last_Year_s_Premium_CAP__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Last_Year_s_Premium_CAP__c , 1), 2) * 100, 99)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year&apos;s Premium CAP</label>
    <type>Text</type>
</CustomField>