ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Net_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Claim_Amount__c</fullName>
    <description>Amount Entered by Loyalty Admin at the time of Approval. This is the Amount that will be reimbursed to the Contractor.</description>
    <label>Net Reimbursable Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>