ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Net_Reimbursable_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Net_Reimbursable_Amount_Formula__c</fullName>
    <description>Field for display purposes (external users/ROOFPRO Contractors) so currency code would not be visible after enabling Multi-Currency</description>
    <formula>&quot;$&quot; &amp;
IF( 
   Net_Claim_Amount__c &gt;= 1000000, 
  TEXT(FLOOR(Net_Claim_Amount__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Net_Claim_Amount__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Net_Claim_Amount__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Net_Claim_Amount__c )), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Net_Claim_Amount__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Net_Claim_Amount__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Net_Claim_Amount__c , 1), 2) * 100, 99)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Reimbursable Amount</label>
    <type>Text</type>
</CustomField>