ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Payment_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference_No__c</fullName>
    <description>This field will be populated by OFM/IMT. It will be unique for all claims.</description>
    <label>Your Payment Reference No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>