ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Personal_Name__c.field-meta.xml
<CustomField>
    <fullName>Personal_Name__c</fullName>
    <label>Personal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>