ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Phone_Number_PA__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_PA__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>