ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Preapproved__c.field-meta.xml
<CustomField>
    <fullName>Preapproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked after Approval Process (Reimbursement Preapproval Request).</description>
    <label>Preapproved</label>
    <type>Checkbox</type>
</CustomField>