ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Production_Date_PA__c.field-meta.xml
<CustomField>
    <fullName>Production_Date_PA__c</fullName>
    <description>Date Contractor expects to produce/print Artwork.</description>
    <label>Estimated Production/Print Date</label>
    <type>Date</type>
</CustomField>