ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/RC_Available_Co_Op_Funds_Formula__c.field-meta.xml
<CustomField>
    <fullName>RC_Available_Co_Op_Funds_Formula__c</fullName>
    <description>Solution to show Coop Dollars as a currency in an environment with Multi-currency enabled.
(value taken from Account).</description>
    <formula>Contractor__r.Available_Co_Op_Funds_Formula__c</formula>
    <label>Available Co-Op Funds</label>
    <type>Text</type>
</CustomField>