ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/RC_Available_Premium_Cap__c.field-meta.xml
<CustomField>
    <fullName>RC_Available_Premium_Cap__c</fullName>
    <description>Fetching the Premium CoOp Cap from Account to show to Contractors &amp; Loyalty Admins so that they know how much funds are available for Claim.</description>
    <formula>Contractor__r.Available_Premium_COOP_Funds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(deprecated) Available Premium Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>