ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/RC_Present_Tier__c.field-meta.xml
<CustomField>
    <fullName>RC_Present_Tier__c</fullName>
    <description>Present Tier of Contractor.</description>
    <formula>Contractor__r.Name_Present_Tier__c</formula>
    <label>Present Tier</label>
    <type>Text</type>
</CustomField>