ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/RC_Prior_Tier__c.field-meta.xml
<CustomField>
    <fullName>RC_Prior_Tier__c</fullName>
    <description>Prior Tier of Contractor.</description>
    <formula>Contractor__r.Prior_Tier__c</formula>
    <label>Prior Tier</label>
    <type>Text</type>
</CustomField>