ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Reimbursement_Items__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Items__c</fullName>
    <description>Items against which Contractor will claim funds.</description>
    <label>Claim Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional Salesforce License Fees for ROOFPRO Contractor Portal</fullName>
            </value>
            <value>
                <fullName>Digital Advertising</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Extended Iron Clad Protection Period Fees</fullName>
            </value>
            <value>
                <fullName>Literature</fullName>
            </value>
            <value>
                <fullName>Personalized Promotional Items</fullName>
            </value>
            <value>
                <fullName>Premiums items and wearables</fullName>
            </value>
            <value>
                <fullName>Print Advertising, Yellow Pages and Billboards</fullName>
            </value>
            <value>
                <fullName>Program Membership Fees</fullName>
            </value>
            <value>
                <fullName>Program Partners’ Services</fullName>
            </value>
            <value>
                <fullName>Radio and TV Advertising</fullName>
            </value>
            <value>
                <fullName>Samples &amp; Displays</fullName>
            </value>
            <value>
                <fullName>Showroom Racks &amp; Wall Display Materials</fullName>
            </value>
            <value>
                <fullName>Tradeshows and Home shows</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Travel to IKO ROOFPRO Profit Power Workshops</fullName>
            </value>
            <value>
                <fullName>Truck Wraps and Graphics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>