ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Rejected_by_Shared_Services__c.field-meta.xml
<CustomField>
    <fullName>Rejected_by_Shared_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejected by Shared Services</label>
    <type>Checkbox</type>
</CustomField>