ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Input by Loyalty Admin for Contractor User.</description>
    <inlineHelpText>Rejection details entered here will be shared in rejection email with the Claimant (ROOFPRO Contractor).</inlineHelpText>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>